Fixing up homepage dark mode

--- a/web/src/client/css/inc/_theme.scss
+++ b/web/src/client/css/inc/_theme.scss
@@ -61,6 +61,12 @@ a {
   }
 }
 
+.title {
+  color: var(--base-color);
+}
+.navbar {
+  background: var(--base-background);
+}
 
 // Bulma hero override
 .hero {
